--- a/将沟/练习a网/新模板页/templates/新模板页模板/分页内容.html
+++ b/将沟/练习a网/新模板页/templates/新模板页模板/分页内容.html
@@ -9,13 +9,16 @@
 </head>
 <body>
 
-<h3>
-    {{名字}}:{{年龄}}
-    <p>{{添加成功}}</p>
+<h1>
+    {{内容}}
 
-</h3>
+</h1>
 <br />
 
-
+ <ul>
+{% for 序号 in 列表 %}
+<li>{{ 序号 }} </li>
+{% endfor %}
+</ul>
 </body>
 </html>
